--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <link href="style.css">
      <title> Анкета ЗУ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
